Fix overflow on some iOS devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,8 @@ body,
   height: 100%;
 }
 
-html {
+html,
+body {
   overflow: hidden;
 }
 
